--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -15,6 +15,12 @@
     padding-left: 0;
 }
 
+.Button:disabled {
+    color: #ccc;
+    cursor: not-allowed;
+
+}
+
 .Success {
     color: #5C9210;
 }
